# dark-vessels

./: CLAUDE.md  CONSTRAINTS.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: publish.yml
.wash/: config.yaml
api-gateway/: Cargo.toml  ui.html
api-gateway/src/: lib.rs
deploy/control/: api-gateway.yaml  httptrigger.yaml  sar-processor.yaml
deploy/wasmcloud/: workloaddeployment.yaml
manifests/: workloaddeployment.yaml
sar-processor/: Cargo.toml
sar-processor/src/: cfar.wgsl  cfar_cpu.rs  gpu.rs  lib.rs  ocean.rs  spatial_join.rs  synthetic.rs  types.rs
wit/: world.wit
