[workspace]
resolver = "3"
package.edition = "2024"
package.authors = ["Arcade"]
members = ["api-gateway", "sar-processor"]

[workspace.dependencies]
wit-bindgen = "0.46.0"
wstd = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
