[package]
name = "sar-processor"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
gpu = []

[dependencies]
wit-bindgen = { workspace = true }
wstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
